--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>"Information about owls"</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="test container">
-    <img class="test image" src="img/newspapers.jfif" alt="Tidningar">
+<body class="html container">
+    <img class="body image" src="img/newspapers.jfif" alt="Tidningar">
     <div class="body container">
         <div class="navbar container">
             <div class="left-navbar container">
