--- a/index.html
+++ b/index.html
@@ -5,42 +5,45 @@
     <title>"Information about owls"</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="html container">
-    <img class="body image" src="img/newspapers.jfif" alt="Tidningar">
-    <div class="body container">
-        <div class="navbar container">
-            <div class="left-navbar container">
+<body id="body" class="container">
+    <img src="img/newspapers.jfif" alt="Newspapers">
+
+    <div class="container">
+        <div id="navbar" class="container">
+            <div class="left container">
+                <img src="img/funny-owl.png" alt="Uggla">
                 <h1>Owls</h1>
-                <img class="left-navbar image" src="img/funny-owl.png" alt="Uggla">
             </div>
-            <div class="right-navbar container">
-                <ul class="right-navbar list">
-                    <li class="right-navbar list-item">
+
+            <div class="right container">
+                <ul>
+                    <li>
                         <a href="https://en.wikipedia.org/wiki/Owl">
                             <h2>Overview</h2></a>
                     </li>
-                    <li class="right-navbar list-item">
+                    <li>
                         <a href="https://en.wikipedia.org/wiki/Owl#Flight_and_feathers">
                             <h2>Appearance</h2></a>
                     </li>
-                    <li class="right-navbar list-item">
+                    <li>
                         <a href="https://en.wikipedia.org/wiki/Owl#Behavior">
                             <h2>Behaviour</h2></a>
                     </li>
-                    <li class="right-navbar list-item">
+                    <li>
                         <a href="https://en.wikipedia.org/wiki/Owl#Adaptations_for_hunting">
                             <h2>Food</h2></a>
                     </li>
-                    <li class="right-navbar list-item">
+                    <li>
                         <a href="https://en.wikipedia.org/wiki/Owl#Breeding_and_reproduction">
                             <h2>Reproduction</h2></a>
                     </li>
                 </ul>
             </div>
         </div>
-        <div class="content container">
-            <h1 class="content headline">Overview</h1>
-            <p class="content text">
+
+        <div id="content" class="container">
+            <h1>Overview</h1>
+            <p>
                 Owls possess large, forward-facing eyes and ear-holes, a hawk-like
                 beak, a flat face, and usually a conspicuous circle of feathers,
                 a facial disc, around each eye. The feathers making up this disc
