fixed head, changed aesthetics.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>"Information about owls"</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body id="body" class="container">
-    <img src="img/newspapers.jfif" alt="Newspapers">
 
-    <div class="container">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/style.css">
+
+        <title>Owl information</title>
+        <link rel="icon" href="img/owl-icon.png">
+        <meta name="description" content="A page for owl information.">
+    </head>
+
+    <body id="body" class="container">
+
         <div id="navbar" class="container">
+
             <div class="left container">
-                <img src="img/funny-owl.png" alt="Uggla">
+                <img src="img/funny-owl.png" alt="Picture of happy a happy owl.">
                 <h1>Owls</h1>
             </div>
 
@@ -39,10 +44,14 @@
                     </li>
                 </ul>
             </div>
+
         </div>
 
         <div id="content" class="container">
+            <img src="img/looking-owl.jpg" alt="Picture of a curious owl.">
+            <div></div>
             <h1>Overview</h1>
+            <hr>
             <p>
                 Owls possess large, forward-facing eyes and ear-holes, a hawk-like
                 beak, a flat face, and usually a conspicuous circle of feathers,
@@ -61,7 +70,7 @@
                 "feelers". Their far vision, particularly in low light, is
                 exceptionally good.
             </p>
-            <p class="content text">
+            <p>
                 Owls can rotate their heads and necks as much as 270°. Owls have
                 14 neck vertebrae compared to seven in humans, which makes their
                 necks more flexible. They also have adaptations to their
@@ -77,8 +86,10 @@
                 anastomoses between the carotid and vertebral arteries support
                 this effect.
             </p>
-            <button></button>
+            <hr>
+            <button><span>Send Feedback!</span></button>
         </div>
-    </div>
-</body>
+
+    </body>
+
 </html>
